--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,27 +14,19 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-primary: #4794ED;
-  --color-secondary: #B86B12;
-  --color-background: #A5C4E2;
-  --color-background-secondary: #85ADCE;
+  --color-primary: #4794ed;
+  --color-secondary: #b86b12;
+  --color-background: #a5c4e2;
+  --color-background-secondary: #85adce;
   --color-text: #f9f9f9;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
+  --color-button: #91c3fc;
+  --color-button-hover: #6eacf1;
 }
 
 body {
   margin: 0;
   display: flex;
-  
+
   flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
@@ -42,8 +34,6 @@ body {
 
 h2 {
   font-size: 2.6em;
-  
-  line-height: 1;
 }
 
 h1 {
@@ -54,15 +44,14 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: none;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  background: var(--color-button);
 }
+
 button:hover {
-  border-color: #646cff;
+  background: var(--color-button-hover);
 }
