--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -5,7 +5,13 @@
   margin: 0;
   padding: 1em;
   display: flex;
+  justify-content: space-between;
   box-sizing: border-box;
   align-self: stretch;
   align-items: center;
+}
+
+.uploadButton {
+  width: 3em;
+  height: 3em;
 }
