Better Image Layout

--- a/frontend/src/components/image-list/ImageList.css
+++ b/frontend/src/components/image-list/ImageList.css
@@ -1,67 +1,63 @@
 .imageList {
-  background: var(--color-background-secondary);
-  width: auto;
-  height: auto;
+  display: grid;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(clamp(120px, 20vw, 200px), 1fr)
+  );
+  gap: clamp(0.5em, 2vw, 2em);
 
   padding: clamp(1em, 5vw, 5em);
-
-  display: flex;
-  gap: clamp(1em, 5vw, 5em);
-
-  flex-wrap: wrap;
-
-  justify-content: center;
-
-  border-radius: 3em;
+  background: var(--color-background-secondary);
+  border-radius: 2em;
+  justify-items: center;
 }
 
 .imageElement {
   background: var(--color-primary);
-  width: 20em;
-  height: 20em;
+  width: clamp(120px, 20vw, 200px);
+  aspect-ratio: 1 / 1;
 
   overflow: hidden;
   user-select: none;
-  border-radius: 2em;
-}
+  border-radius: 1em;
 
+  display: flex;
+  flex-direction: column;
+}
 .image {
-  height: 75%;
   width: 100%;
+  height: 70%;
   object-fit: cover;
   object-position: center;
 }
 
 .controls {
-  width: 100%;
-  height: 25%;
-  background-color: var(--color-primary);
+  flex: 1;
   display: flex;
-  align-self: center;
   align-items: center;
-  gap: clamp(0.1em, 5vw, 1em);
+  gap: clamp(0.1em, 0.1vw, 1em);
   justify-content: center;
+  background-color: var(--color-primary);
 }
 
 .controlButton {
+  width: clamp(1em, 5vw, 2.5em);
+  height: clamp(1em, 5vw, 2.5em);
   aspect-ratio: 1 / 1;
-  width: 3em;
-  min-width: 2em;
-  max-width: 4em;
 
   background-color: var(--color-button);
   border: none;
-  border-radius: 0.5em;
+  border-radius: 0.3em;
 
-  transition: background-color 0.2s, transform 0.2s;
+  transition: background-color 0.2s, scale 0.2s;
   cursor: pointer;
 }
 
 .controlButton:hover {
   background-color: var(--color-button-hover);
-  transform: scale(1.05);
+  scale: 1.05;
 }
 
 .controlButton:active {
-  transform: scale(0.95);
+  scale: 0.95;
 }
